# Clasificacion_Asignacion_DocentesTDF

./: Makefile  README.md  pyproject.toml
Clasificacion_Asignacion_DocentesTDF/: __init__.py  dataset.py  features.py  plots.py
Clasificacion_Asignacion_DocentesTDF/modeling/: predict.py  train.py
data/: README_DATA.md
docs/: mkdocs.yml  readme.md
docs/docs/: README_Entrega_2.md  Sin confirmar 120083.crdownload  index.md  readme.md  readme_proyecto_docentes.md
notebooks/: 1-Descripción del dataset.ipynb  2-Limpieza y Tratamiento de Datos .ipynb  3-Modelo_Regresion_Logistica.ipynb  4-Arbol_Decision.ipynb  5-Modelo_Random_Forest.ipynb  6-Regresion_Logistica_Por_Espacio_Poco_Dato .ipynb  Descripción del dataset.ipynb  README.md
notebooks/.ipynb_checkpoints/: 1-Descripción del dataset-checkpoint.ipynb  2-Limpieza y Tratamiento de Datos -checkpoint.ipynb  3-Modelo_Regresion_Logistica-checkpoint.ipynb  4-Arbol_Decision-checkpoint.ipynb  5-Modelo_Random_Forest-checkpoint.ipynb  6-Regresion_Logistica_Por_Espacio_Poco_Dato -checkpoint.ipynb  README-checkpoint.md
